# Ai_architect_portfolio_NFRs

./: .gitignore  README.md  implementationplan.md
enterprise-fairness-dashboard/: README.md  docker-compose.yml
enterprise-fairness-dashboard/backend/: requirements.txt
enterprise-fairness-dashboard/db/: init.sql
enterprise-fairness-dashboard/frontend/: index.html  (+2 more)
hr-bias-audit/: README.md  pyproject.toml
hr-bias-audit/scripts/: run.ps1
hr-bias-audit/src/hr_bias_audit/: config.py
hr-bias-audit/src/hr_bias_audit/analysis/: __init__.py  bias_engine.py  demo_data.py  demographic_parser.py  fairness_metrics.py  remediation.py  sample_data.py
hr-bias-audit/src/hr_bias_audit/ingest/: __init__.py  resume_parser.py
hr-bias-audit/src/hr_bias_audit/models/: __init__.py  audit_result.py  resume.py
hr-bias-audit/src/hr_bias_audit/ui/: dashboard.py
hr-bias-audit/src/hr_bias_audit/ui/components/: charts.py  metrics.py
hr-bias-audit/src/hr_bias_audit/ui/pages/: __init__.py  bias_report.py  compliance.py  demo_landing.py  remediation.py  resume_view.py  what_if.py
hr-bias-audit/tests/: test_bias_engine.py
trustguard-ai/: .gitignore  README.md  docker-compose.yml
trustguard-ai/backend/: .env  Dockerfile  pyproject.toml
trustguard-ai/backend/app/: config.py  database.py  main.py  models.py  schemas.py
trustguard-ai/backend/app/routes/: alerts.py  governance.py  pipelines.py  reliability.py
trustguard-ai/backend/app/simulation/: drift_detector.py  failover_manager.py  fraud_pipeline.py  metrics_engine.py
trustguard-ai/backend/scripts/: seed_data.py
(+39 files in other folders)
