[project]
name = "hr-bias-audit"
version = "0.1.0"
description = "AI-driven bias detection & mitigation platform for HR resume screening"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.40",
    "pandas>=2.2",
    "numpy>=1.26",
    "plotly>=5.24",
    "scikit-learn>=1.6",
    "spacy>=3.8",
    "python-docx>=1.1",
    "PyPDF2>=3.0",
    "pydantic>=2.10",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hr_bias_audit"]
